objects/Apttus_Config2__LineItemRollup__c.object
<CustomObject>
    <description>Holds rollup summary custom fields</description>
    <fields>
        <fullName>APTS_Min_Online_Software_Contract_Term__c</fullName>
        <label>Min Online Software Contract Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Bundle_Points__c</fullName>
        <label>Total Bundle Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AppliedExpressionInfoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Expression Info</label>
        <referenceTo>Apttus_Config2__AppliedExpressionInfo__c</referenceTo>
        <relationshipLabel>Line Item Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Lineitem Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Line Item Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupedByDescription__c</fullName>
        <label>Grouped By Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupedByField__c</fullName>
        <label>Grouped By Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Lineitem Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalQuantity__c</fullName>
        <description>Holds total line item quantity resulting from rollup expression.</description>
        <inlineHelpText>Holds total line item quantity resulting from rollup expression.</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Line Item Rollup</label>
    <nameField>
        <label>Line Item Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Item Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>